generate scaffolding for project and validation for title and description

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -29,3 +29,10 @@
     Hello World
     %p Find me in app/views/home/index.html.erb
 
+.fab.fa-amazon
+= link_to root_path do 
+    .fa.fa-home 
+
+= link_to projects_path, class: 'btn btn-success' do 
+    .fa.fa-book
+    Project
