--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,6 +7,7 @@
     %tr
       %th Title
       %th Description
+      %th User
       %th
       %th
       %th
@@ -16,6 +17,7 @@
       %tr
         %td= project.title
         %td= project.description
+        %td= project.user
         %td= link_to 'Show', project
         %td= link_to 'Edit', edit_project_path(project)
         %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
